# Quit-Stealing-Ram

./: .gitignore  CMakeLists.txt  QSR.service  QuitStealingRam.project  README.md  main.c  qsr.conf  qsr.service
src/: cparser.c  cparser.h  main.c  strutil.c  strutil.h  ulog.c  ulog.h
